...
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- tools:showIn="@layout/navigation_activity_main"-->


    <Button
        android:id="@+id/btnallservice1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="377dp"
        android:layout_height="53dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
...
