...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.steffen.nameapp.Activities.MainActivity">


    <Button
        android:id="@+id/Bilder"
        android:layout_width="143dp"
        android:layout_height="56dp"
        android:onClick="onPic"
        android:text="Pictures"
        app:layout_constraintBottom_toTopOf="@+id/Navn"
        app:layout_constraintEnd_toEndOf="parent"
...
